--- a/Project/Proposal/mobileNet_deepfake_detection.ipynb
+++ b/Project/Proposal/mobileNet_deepfake_detection.ipynb
@@ -38,6 +38,8 @@
     "    transforms.Resize((160, 160)),\n",
     "    transforms.RandomHorizontalFlip(0.5),\n",
     "    transforms.RandomVerticalFlip(0.5),\n",
+    "    transforms.RandomResizedCrop(160, scale=(0.8, 1.0)),\n",
+    "    transforms.RandomAffine(degrees=0, shear=(0.2, 0.2), translate=(0.2, 0.2)),\n",
     "    transforms.ToTensor()\n",
     "])"
    ]
