--- a/Project/mobileNet_deepfake_detection.ipynb
+++ b/Project/mobileNet_deepfake_detection.ipynb
@@ -696,7 +696,9 @@
     "\n",
     "test_loss, test_accuracy, predictions, true_labels = test(mobile_deepfake_model, test_loader, criterion, device)\n",
     "\n",
-    "print(f\"Final Test Accuracy: {test_accuracy:.2f}%\")\n"
+    "print(f\"Final Test Accuracy: {test_accuracy:.2f}%\")\n",
+    " \n",
+    " "
    ]
   }
  ],
